[package]
name = "sniprrr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26"
ratatui = "0.20.1"
unicode-width = "0.1" # ????
rand = "0.8" # ????
arboard = "3.2.0"


[dev-dependencies]
